# autogen

./: Cargo.toml  README.md
.github/: CODEOWNERS
src/: args.rs  expand.rs  generics.rs  lib.rs  readme_tests.rs  replacement.rs  unique_vec.rs
tests/: enums.rs  replacements.rs  structs.rs  traits.rs
