[lib]
proc-macro = true

[package]
name = "autogen"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Autogen is a set of macros that allows you to automatically apply generics to impl blocks."
repository = "https://github.com/pstroka/autogen"
keywords = ["generics", "types", "impl", "traits", "autogen"]

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
